Do not show extra dirs in Ivy

--- a/custom.org
+++ b/custom.org
@@ -1365,7 +1365,8 @@ function.
 
     (ivy-mode 1)
 
-    (setq ivy-use-virtual-buffers t
+    (setq ivy-extra-directories nil
+          ivy-use-virtual-buffers t
           ivy-wrap t)
 
     (global-set-key (kbd "C-c C-r") 'ivy-resume)
