--- a/custom.org
+++ b/custom.org
@@ -655,7 +655,7 @@ function.
        - tomorrow-day
        - whiteboard")
 
-     (defvar k20e/theme-dark 'tomorrow-night-eighties
+     (defvar k20e/theme-dark 'tomorrow-night
        "The default darkly colored theme.
 
      Other good dark candidates:
