--- a/custom.org
+++ b/custom.org
@@ -628,10 +628,10 @@ function.
 ** Theme
 
    #+BEGIN_SRC emacs-lisp
-     (defvar k20e/theme-light 'tango
+     (defvar k20e/theme-light 'sanityinc-tomorrow-day
        "The default lightly colored theme.")
 
-     (defvar k20e/theme-dark 'wombat
+     (defvar k20e/theme-dark 'sanityinc-tomorrow-night
        "The default darkly colored theme.")
 
      (defun k20e/theme-load-light ()
