Shut up Paradox

--- a/custom.org
+++ b/custom.org
@@ -1905,6 +1905,14 @@ function.
      (defvar org-clock-idle-time 5)
    #+END_SRC
 
+* Paradox
+
+  #+BEGIN_SRC emacs-lisp
+    (require 'paradox)
+
+    (setq-default paradox-execute-asynchronously nil)
+  #+END_SRC
+
 * paredit-mode
 
   #+BEGIN_SRC emacs-lisp
