--- a/custom.org
+++ b/custom.org
@@ -735,13 +735,27 @@ function.
 
   #+BEGIN_SRC emacs-lisp
     (require 'ag)
-    (require 'counsel)
 
     (setq ag-arguments
-          '("--smart-case" "--nogroup" "--column" "--smart-case" "--stats" "--vimgrep" "--")
+          '("--smart-case" "--nogroup" "--column" "--stats" "--")
           ag-highlight-search t)
+  #+END_SRC
 
-    (global-set-key (kbd "C-x C-a") 'counsel-ag)
+  Counsel only tells =ag= to search the current directory.  I almost
+  always want to search the current Git repository.
+
+  #+BEGIN_SRC emacs-lisp
+    (require 'ag)
+    (require 'counsel)
+
+    (defun k20e/counsel-ag-project (initial-input)
+      "Search using `counsel-ag' from the project root for INITIAL-INPUT."
+      (interactive (list (thing-at-point 'symbol)))
+      (counsel-ag initial-input (condition-case err
+                                    (vc-root-dir)
+                                  (error default-directory))))
+
+    (global-set-key (kbd "C-x C-a") 'k20e/counsel-ag-project)
   #+END_SRC
 
 * arduino-mode
