--- a/custom.org
+++ b/custom.org
@@ -810,6 +810,15 @@ function.
     (global-set-key (kbd "<H-S-right>") 'buf-move-right)
   #+END_SRC
 
+* Calendar
+
+  #+BEGIN_SRC emacs-lisp
+    (defun k20e/calendar-mode-hook ()
+      (buffer-face-mode))
+
+    (add-hook 'calendar-mode-hook 'k20e/calendar-mode-hook)
+  #+END_SRC
+
 * cider
 
   #+BEGIN_SRC emacs-lisp
@@ -953,6 +962,7 @@ function.
 
     (defun k20e/dired-mode-hook ()
       (auto-revert-mode 1)
+      (buffer-face-mode)
       (setq auto-revert-verbose nil)
       (set-face-foreground 'dired-flagged "tomato1")
       (set-face-attribute 'dired-flagged nil :strike-through t))
