Try out smart mode line

--- a/custom.org
+++ b/custom.org
@@ -2127,6 +2127,16 @@ function.
       (server-start))
   #+END_SRC
 
+* smart-mode-line
+
+  #+BEGIN_SRC emacs-lisp
+    (require 'smart-mode-line)
+
+    (setq-default sml/theme 'respectful)
+
+    (sml/setup)
+  #+END_SRC
+
 * smex
 
   #+BEGIN_SRC emacs-lisp
