--- a/custom.org
+++ b/custom.org
@@ -1542,11 +1542,6 @@ function.
   #+BEGIN_SRC emacs-lisp
     (require 'org)
 
-    (defun k20e/org-return ()
-      "Tell `org-return' to indent, please."
-      (interactive)
-      (org-return t))
-
     (defun k20e/org-mode-hook ()
       (auto-fill-mode 1)
       (org-toggle-pretty-entities) ;; Display entities as UTF-8 characters.
@@ -1611,10 +1606,11 @@ function.
      (global-set-key (kbd "C-x c") 'org-switchb)
      (global-set-key (kbd "<f12>") 'org-agenda-list)
 
-     (define-key org-mode-map (kbd "<return>") 'k20e/org-return)
+     (define-key org-mode-map (kbd "<return>") 'org-return-indent)
+     (define-key org-mode-map (kbd "M-<return>") 'org-meta-return)
      (define-key org-mode-map (kbd "C-c C-r") 'ivy-resume)
      (define-key org-mode-map (kbd "C-j") 'join-line)
-     (define-key org-mode-map (kbd "C-m") 'k20e/org-return)
+     (define-key org-mode-map (kbd "C-m") 'org-return-indent)
      (define-key org-mode-map (kbd "H-<tab>") 'pcomplete)
      (define-key org-mode-map (kbd "M-h") 'backward-kill-word)
    #+END_SRC
