--- a/custom.org
+++ b/custom.org
@@ -1545,9 +1545,12 @@ function.
 
     (defun k20e/org-mode-hook ()
       (auto-fill-mode 1)
-      (org-toggle-pretty-entities) ;; Display entities as UTF-8 characters.
       (visual-line-mode 0)
-      (setq truncate-lines nil))
+      (setq org-pretty-entities t           ; Display entities as UTF-8 characters.
+            truncate-lines nil
+            org-fontify-quote-and-verse-blocks t
+            org-fontify-whole-heading-line t)
+      (setq-local global-hl-line-mode nil))
 
     (add-hook 'org-mode-hook 'k20e/org-mode-hook)
 
