--- a/custom.org
+++ b/custom.org
@@ -1118,8 +1118,9 @@ function.
             (d "src/github.com/golang/lint/misc/emacs")
             (f "golint.el"))
         (require 'golint (expand-file-name f (expand-file-name d gopath))))
-      (setq tab-width 4
-            indent-tabs-mode t)
+      (setq fill-column 118
+            indent-tabs-mode t
+            tab-width 4)
       (flycheck-mode 1)
       (add-hook 'before-save-hook 'gofmt-before-save))
 
