--- a/custom.org
+++ b/custom.org
@@ -1109,8 +1109,15 @@ function.
     go get github.com/rogpeppe/godef
   #+END_SRC
 
+  Install Go Guru:
+
+  #+BEGIN_SRC sh
+    go get golang.org/x/tools/cmd/guru
+  #+END_SRC
+
   #+BEGIN_SRC emacs-lisp
     (require 'flycheck)
+    (require 'go-guru)
     (require 'go-mode)
 
     (defun k20e/go-mode-hook ()
@@ -1118,17 +1125,33 @@ function.
             (d "src/github.com/golang/lint/misc/emacs")
             (f "golint.el"))
         (require 'golint (expand-file-name f (expand-file-name d gopath))))
+
       (setq fill-column 118
             indent-tabs-mode t
             tab-width 4)
+
       (flycheck-mode 1)
+
       (add-hook 'before-save-hook 'gofmt-before-save))
 
-    (define-key go-mode-map (kbd "C-c C-t") 'k20e/toggle-test-buffer)
     (define-key go-mode-map (kbd "C-c C-r") 'go-remove-unused-imports)
+    (define-key go-mode-map (kbd "C-c C-t") 'k20e/toggle-test-buffer)
+    (define-key go-mode-map (kbd "C-M-SPC") 'go-guru-expand-region)
 
     (add-hook 'go-mode-hook 'k20e/go-mode-hook)
   #+END_SRC
+
+** [1/5] =TODO=
+
+   - [ ] https://godoc.org/golang.org/x/tools/cmd/goimports instead of
+     =gofmt= on save hook?  Why not both?
+   - [X] Ditch =company= and =company-go=, they feel wonky to me
+   - [ ] Try out https://github.com/syohex/emacs-go-eldoc instead of
+     =company= nonsense
+   - [ ] Steal some of these https://github.com/dominikh/yasnippet-go
+   - [ ] Whoa, Go Guru
+     - https://www.youtube.com/watch?v=ak97oH0D6fI
+     - https://docs.google.com/document/d/1_Y9xCEMj5S-7rv2ooHpZNH15JgRT5iM742gJkw5LtmQ/edit
 
 * groovy-mode
 
